add api to create product
- create product.
- missing validation product request